--- a/Readme.mkd
+++ b/Readme.mkd
@@ -1,3 +1,45 @@
- barbarism by benediction 
+Source code for the demo Wunderbar on the Amstrad CPC platform: http://www.pouet.net/prod.php?which=69684
 
- Tentative of effect with bars for reset
+```
+
+
+                 .                                                             .
+                _|_______________________________________________________________|_
+                 |_______________________________________________________________|
+    .         ___._____                                                          |
+_ __|_ ____ _|         |                     _|_______________________________|_ |
+    |        |         :                      |                               |  |
+    |      /\:     .___.___ _____._______.    |        . .:Credits:. .        |  |
+    |     /  \ __ /    |   ||    |        \  _|_______________________________|_ |
+    |    /   //  \\   /|   ||   /|    ||   \  |                               |  |
+    |    \_____/\____/ ._______/ |____||____: .   Code: Krusty/ Benediction   .  |
+    |        .         :         _____        .     Music: Targhan/ Arkos     .  |
+    |_ ______|         |        |    _\       . Visual: Voxfreax/ Benediction .  |
+             |___.___ _|_   .___|   | ._________.______ _                        |
+                 |     |   / ____   |/   _     /     __//                        |
+                 |        |  |      |   :/   _/|     |                           |
+                 |         \________/\______________ |                           |
+                 |                            _____ \|            _ ______ _     |
+                 |  .:BENEDICTION:.           \_   | :           :          |    :
+                 |                             |   |___.  _______. ________ |_ __.__ _ 
+                 |           .:ARKOS:.         |        \/  __   |/    __// .         |
+                 |                             |   ____|   /_/   |     |    :         :
+                 |               .:AMSTRAD:.   \________/\____/__:____ |    |         |
+                 |                                               |    \|    |         |
+                 |                                              _|_ __ :____|         |
+                 |                                               |        :           |
+                 |               .                               .        |_ ____.____|__ _
+                 |              _|_______________________________|_              |    :
+                 |               |                               |               |    .
+                 |               |         . .:Notes:. .         |               |
+                 |              _|_______________________________|_              |
+                 |               |                               |               |
+                 |               .   Watch it on real hardware!  .               |
+                 |              Spread this 4K & show us your love!              |
+                 |       Satanic bugs from outer space might appear on CRTCs0    |
+                 |        Developed with love from January until April, 2017     |
+                 |             <3 Benediction & Arkos @ Revision <3              |
+                 |_______________________________________________________________|
+                _|_________C_O_N_S_P_I_R_A_C_Y________M_O_D_E______O_N___________|_
+                 |                                                               |
+```
